--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <!-- LIENS CSS GENERAL -->
-   <link rel="stylesheet" href="../CSS/style.css" />
+   <link rel="stylesheet" href="/CSS/style.css" />
    <!-- LIENS DES ICONES FONT AWESOME -->
    <link
        rel="stylesheet"
        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
    />
-    <link rel="stylesheet" href="CSS/accueil.css">
+    <link rel="stylesheet" href="/CSS/accueil.css">
     <title>WE LOVE GREEN</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-        
+
     </main>
     <footer>
         <section class="footer__gauche">
