--- a/HTML/structure-de-base.html
+++ b/HTML/structure-de-base.html
@@ -55,7 +55,7 @@
         </main>
         <footer>
             <section class="footer__gauche">
-                <figure>
+                <figure class="logo">
                     <img
                         src="https://placehold.co/150x200"
                         alt="Logo du festival"
@@ -75,7 +75,7 @@
                         l'environnement.
                     </p>
                 </article>
-                <article style="display: flex">
+                <article class="reseaux-sociaux">
                     <figure>
                         <a href="#">
                             <i class="fa-brands fa-facebook-f fa-xl"></i>
@@ -112,15 +112,27 @@
             <section class="footer__droit">
                 <article>
                     <h3>NEWSLETTER</h3>
-                    <input type="email" name="newsletter" placeholder="Mail"/>
-                    <button type="submit" class="button__noir-contour-vert">S'ABONNER</button>
+                    <input type="email" name="newsletter" placeholder="Mail" />
+                    <button type="submit" class="button__noir-contour-vert">
+                        S'ABONNER
+                    </button>
                 </article>
                 <article>
-                    <p>FAQ</p>
-                    <p>Contacts</p>
-                    <p>Mentions légales</p>
-                    <p>Plolitiques de confidentialité</p>
-                    <p>Données personnels et cookies</p>
+                    <a href="#">
+                        <p>FAQ</p>
+                    </a>
+                    <a href="#">
+                        <p>Contacts</p>
+                    </a>
+                    <a href="#">
+                        <p>Mentions légales</p>
+                    </a>
+                    <a href="#">
+                        <p>Plolitiques de confidentialité</p>
+                    </a>
+                    <a href="#">
+                        <p>Données personnels et cookies</p>
+                    </a>
                 </article>
             </section>
 
