--- a/HTML/structure-de-base.html
+++ b/HTML/structure-de-base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- LIENS CSS GENERAL -->
-        <link rel="stylesheet" href="/CSS/style.css" />
+        <link rel="stylesheet" href="CSS/style.css" />
         <!-- LIENS DES ICONES FONT AWESOME -->
         <link
             rel="stylesheet"
