--- a/HTML/structure-de-base.html
+++ b/HTML/structure-de-base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- LIENS CSS GENERAL -->
-        <link rel="stylesheet" href="CSS/style.css" />
+        <link rel="stylesheet" href="../CSS/style.css" />
         <!-- LIENS DES ICONES FONT AWESOME -->
         <link
             rel="stylesheet"
@@ -22,10 +22,10 @@
                         <a href="#">FESTIVAL</a>
                     </li>
                     <li>
-                        <a href="/HTML/billeterie.html">BILLETERIE</a>
+                        <a href="./billeterie.html">BILLETERIE</a>
                     </li>
                     <li>
-                        <a href="/index.html">
+                        <a href="../index.html">
                             <figure>
                                 <img
                                     src="/IMG/logo_welovegreen.png"
@@ -35,16 +35,16 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/HTML/programmation.html">PROGRAMMATION</a>
+                        <a href="./programmation.html">PROGRAMMATION</a>
                     </li>
                     <li>
-                        <a href="/HTML/galerie.html">AFFICHE</a>
+                        <a href="./galerie.html">AFFICHE</a>
                     </li>
                 </ul>
             </nav>
             <figure class="video_header">
                 <video autoplay muted loop>
-                    <source src="/IMG/background_header.mp4" type="video/mp4" />
+                    <source src="../IMG/background_header.mp4" type="video/mp4" />
                 </video>
             </figure>
 
@@ -61,7 +61,7 @@
             <section class="footer__gauche">
                 <figure class="logo">
                     <img
-                        src="/IMG/logo_welovegreen.png"
+                        src="../IMG/logo_welovegreen.png"
                         alt="Logo du festival"
                     />
                 </figure>
@@ -167,7 +167,7 @@
             </section>
         </footer>
 
-        <script src="/JS/script.js"></script>
+        <script src="../JS/script.js"></script>
     </body>
 </html>
 
