--- a/HTML/structure-de-base.html
+++ b/HTML/structure-de-base.html
@@ -28,7 +28,7 @@
                         <a href="../index.html">
                             <figure>
                                 <img
-                                    src="/IMG/logo_welovegreen.png"
+                                    src="../img/logo_welovegreen.png"
                                     alt="Image du logo"
                                 />
                             </figure>
@@ -44,7 +44,7 @@
             </nav>
             <figure class="video_header">
                 <video autoplay muted loop>
-                    <source src="../IMG/background_header.mp4" type="video/mp4" />
+                    <source src="../img/background_header.mp4" type="video/mp4" />
                 </video>
             </figure>
 
@@ -61,7 +61,7 @@
             <section class="footer__gauche">
                 <figure class="logo">
                     <img
-                        src="../IMG/logo_welovegreen.png"
+                        src="../img/logo_welovegreen.png"
                         alt="Logo du festival"
                     />
                 </figure>
@@ -167,7 +167,7 @@
             </section>
         </footer>
 
-        <script src="../JS/script.js"></script>
+        <script src="../js/script.js"></script>
     </body>
 </html>
 
