--- a/HTML/structure-de-base.html
+++ b/HTML/structure-de-base.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="We Love Green est un festival français de musique électro-pop organisé à Paris depuis 2010, se déroulant à l’approche de l’été. We Love Green allie événement artistique et respect de l'environnement."
+        />
+        <meta name="keywords" content="festival, festival paris, festival été,"/>
 
         <!-- LIENS CSS GENERAL -->
         <link rel="stylesheet" href="../CSS/style.css" />
@@ -12,14 +17,47 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         />
 
-        <title>COMPOSANTS</title>
+        <!-- SEO que pour cette page-->
+        <meta name="robots" content="noindex,nofollow" />
+
+        <!-- L'ICONE DE LA PAGE -->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="ressource/favicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="../ressource/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="../ressource/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="../ressource/favicon/site.webmanifest" />
+        <link
+            rel="mask-icon"
+            href="../ressource/favicon/safari-pinned-tab.svg"
+            color="#08fc66"
+        />
+        <meta name="msapplication-TileColor" content="#ebf192" />
+        <meta name="theme-color" content="#ffffff" />
+
+        <title>WE LOVE GREEN - structure&style de base</title>
     </head>
+
     <body>
         <header>
             <nav>
                 <ul>
                     <li>
-                        <a href="#">FESTIVAL</a>
+                        <a id="festival"
+                            >FESTIVAL <i class="fa-solid fa-angle-down"></i
+                        ></a>
                     </li>
                     <li>
                         <a href="./billeterie.html">BILLETERIE</a>
@@ -28,7 +66,7 @@
                         <a href="../index.html">
                             <figure>
                                 <img
-                                    src="../img/logo_welovegreen.png"
+                                    src="../img/logo_welovegreen_new.png"
                                     alt="Image du logo"
                                 />
                             </figure>
@@ -44,7 +82,10 @@
             </nav>
             <figure class="video_header">
                 <video autoplay muted loop>
-                    <source src="../img/background_header.mp4" type="video/mp4" />
+                    <source
+                        src="../img/background_header.mp4"
+                        type="video/mp4"
+                    />
                 </video>
             </figure>
 
@@ -57,6 +98,7 @@
                 <h2>EFFET DE PARALLAX</h2>
             </section> -->
         </main>
+
         <footer>
             <section class="footer__gauche">
                 <figure class="logo">
@@ -142,11 +184,19 @@
 
             <section class="credit">
                 <article>
-                    <figure><i class="fa-regular fa-credit-card fa-2xl"></i></figure>
+                    <figure>
+                        <i class="fa-regular fa-credit-card fa-2xl"></i>
+                    </figure>
                     <figure><i class="fa-brands fa-cc-visa fa-2xl"></i></figure>
-                    <figure><i class="fa-brands fa-cc-mastercard fa-2xl"></i></figure>
-                    <figure><i class="fa-brands fa-cc-apple-pay fa-2xl"></i></figure>
-                    <figure><i class="fa-brands fa-cc-paypal fa-2xl"></i></figure>
+                    <figure>
+                        <i class="fa-brands fa-cc-mastercard fa-2xl"></i>
+                    </figure>
+                    <figure>
+                        <i class="fa-brands fa-cc-apple-pay fa-2xl"></i>
+                    </figure>
+                    <figure>
+                        <i class="fa-brands fa-cc-paypal fa-2xl"></i>
+                    </figure>
                     <!-- <figure></figure> -->
                 </article>
                 <article>
@@ -156,12 +206,22 @@
                 </article>
                 <article>
                     <figure>
-                        <i class="fa-solid fa-code"></i>
-                        <figcaption>Github projet</figcaption>
+                        <a
+                            href="https://github.com/Mickey78-225/WE-LOVE-GREEN.git"
+                            target="_blank"
+                        >
+                            <i class="fa-solid fa-code"></i>
+                            <figcaption>Github projet</figcaption>
+                        </a>
                     </figure>
                     <figure>
-                        <i class="fa-brands fa-github"></i>
-                        <figcaption>Figma projet</figcaption>
+                        <a
+                            href="https://www.figma.com/proto/v675xdsCaajBcOyzdd4ZUd/Projet-festival?node-id=20%3A2&t=wW1oePZRwZoVQNwQ-1"
+                            target="_blank"
+                        >
+                            <i class="fa-brands fa-github"></i>
+                            <figcaption>Figma projet</figcaption>
+                        </a>
                     </figure>
                 </article>
             </section>
