--- a/HTML/structure-de-base.html
+++ b/HTML/structure-de-base.html
@@ -3,50 +3,46 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-            name="description"
-            content="We Love Green est un festival français de musique électro-pop organisé à Paris depuis 2010, se déroulant à l’approche de l’été. We Love Green allie événement artistique et respect de l'environnement."
-        />
-        <meta name="keywords" content="festival, festival paris, festival été,"/>
 
         <!-- LIENS CSS GENERAL -->
-        <link rel="stylesheet" href="../CSS/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
         <!-- LIENS DES ICONES FONT AWESOME -->
         <link
             rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        />
-
-        <!-- SEO que pour cette page-->
-        <meta name="robots" content="noindex,nofollow" />
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+        <!-- BALISE META -->
+        <meta
+            name="description"
+            content="We Love Green est un festival français de musique électro-pop organisé à Paris depuis 2010, se déroulant à l’approche de l’été. We Love Green allie événement artistique et respect de l'environnement." />
+        <meta
+            name="keywords"
+            content="festival, festival paris, festival été," />
 
         <!-- L'ICONE DE LA PAGE -->
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="ressource/favicon/apple-touch-icon.png"
-        />
+            href="ressource/favicon/apple-touch-icon.png" />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="../ressource/favicon/favicon-32x32.png"
-        />
+            href="../ressource/favicon/favicon-32x32.png" />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="../ressource/favicon/favicon-16x16.png"
-        />
+            href="../ressource/favicon/favicon-16x16.png" />
         <link rel="manifest" href="../ressource/favicon/site.webmanifest" />
         <link
             rel="mask-icon"
             href="../ressource/favicon/safari-pinned-tab.svg"
-            color="#08fc66"
-        />
+            color="#08fc66" />
         <meta name="msapplication-TileColor" content="#ebf192" />
         <meta name="theme-color" content="#ffffff" />
 
+        <!-- SEO que pour cette page-->
+        <meta name="robots" content="noindex,nofollow" />
         <title>WE LOVE GREEN - structure&style de base</title>
     </head>
 
@@ -67,8 +63,7 @@
                             <figure>
                                 <img
                                     src="../img/logo_welovegreen_new.png"
-                                    alt="Image du logo"
-                                />
+                                    alt="Image du logo" />
                             </figure>
                         </a>
                     </li>
@@ -83,9 +78,8 @@
             <figure class="video_header">
                 <video autoplay muted loop>
                     <source
-                        src="../img/background_header.mp4"
-                        type="video/mp4"
-                    />
+                        src="../img/accueil/background_header.mp4"
+                        type="video/mp4" />
                 </video>
             </figure>
 
@@ -104,8 +98,7 @@
                 <figure class="logo">
                     <img
                         src="../img/logo_welovegreen.png"
-                        alt="Logo du festival"
-                    />
+                        alt="Logo du festival" />
                 </figure>
                 <article>
                     <p>
@@ -208,8 +201,7 @@
                     <figure>
                         <a
                             href="https://github.com/Mickey78-225/WE-LOVE-GREEN.git"
-                            target="_blank"
-                        >
+                            target="_blank">
                             <i class="fa-solid fa-code"></i>
                             <figcaption>Github projet</figcaption>
                         </a>
@@ -217,8 +209,7 @@
                     <figure>
                         <a
                             href="https://www.figma.com/proto/v675xdsCaajBcOyzdd4ZUd/Projet-festival?node-id=20%3A2&t=wW1oePZRwZoVQNwQ-1"
-                            target="_blank"
-                        >
+                            target="_blank">
                             <i class="fa-brands fa-github"></i>
                             <figcaption>Figma projet</figcaption>
                         </a>
