--- a/HTML/structure-de-base.html
+++ b/HTML/structure-de-base.html
@@ -83,6 +83,9 @@
                 </video>
             </figure>
 
+            <a href="./billeterie.html" class="CTA">
+                <button class="boutton_vert">PRENDS TON PASS</button>
+            </a>
             <i class="fa-solid fa-angles-down fa-xl"></i>
         </header>
 
@@ -152,7 +155,7 @@
                 <article>
                     <h3>NEWSLETTER</h3>
                     <input type="email" name="newsletter" placeholder="Mail" />
-                    <button type="submit" class="button__noir-contour-vert">
+                    <button type="submit" class="boutton_noir-contour-vert">
                         S'ABONNER
                     </button>
                 </article>
