--- a/index.html
+++ b/index.html
@@ -56,11 +56,27 @@
             </video>
         </figure>
 
+        <a href="./html/billeterie.html" class="cta">
+            <button class="boutton_noir-contour-vert">PRENDS TON PASS</button>
+        </a>
         <i class="fa-solid fa-angles-down fa-xl"></i>
     </header>
 
     <!--++++++++++++++++++++++++++++++++ MAIN ++++++++++++++++++++++++++++++++-->
     <main>
+        <section class="artiste">
+            <article>CARROUSEL</article>
+            <article>IMAGE ARTISTE</article>
+        </section>
+        <section class="presentation">
+            <article>TEXTE</article>
+            <article>CARROUSEL</article>
+        </section>
+        <section class="infos_pratiques">
+            <article>LIEU & HORAIRES</article>
+            <article>VENIR AU FESTIVAL</article>
+            <article>ECO CONSIGNES</article> 
+        </section>
     </main>
     <!--++++++++++++++++++++++++++++++++ FIN MAIN ++++++++++++++++++++++++++++++++-->
 
@@ -103,7 +119,7 @@
             <article>
                 <h3>NEWSLETTER</h3>
                 <input type="email" name="newsletter" placeholder="Mail" />
-                <button type="submit" class="button__noir-contour-vert"> S'ABONNER
+                <button type="submit" class="boutton_noir-contour-vert"> S'ABONNER
                 </button>
             </article>
             <article>
