--- a/html/structure-de-base.html
+++ b/html/structure-de-base.html
@@ -75,25 +75,14 @@
                     </li>
                 </ul>
             </nav>
-            <figure class="video_header">
-                <video autoplay muted loop>
-                    <source
-                        src="../img/accueil/background_header.mp4"
-                        type="video/mp4" />
-                </video>
-            </figure>
 
-            <a href="./billeterie.html" class="CTA">
-                <button class="boutton_vert">PRENDS TON PASS</button>
-            </a>
-            <i class="fa-solid fa-angles-down fa-xl"></i>
         </header>
 
         <main>
             <!-- PARALLAX IMG -->
-            <!-- <section class="parallax">
+            <section class="parallax">
                 <h2>EFFET DE PARALLAX</h2>
-            </section> -->
+            </section>
         </main>
 
         <footer>
@@ -231,7 +220,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 50vh;
+        height: 80vh;
         width: 100%;
         font: bold 32px LAILA;
 
