--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -53,19 +53,63 @@
                     <a href="./galerie.html">AFFICHE</a>
                 </li>
             </ul>
-        </nav>
-        <figure class="video_header">
-            <video autoplay muted loop>
-                <source src="../img/accueil/background_header.mp4" type="video/mp4" />
-            </video>
-        </figure>
-
-        <i class="fa-solid fa-angles-down fa-xl"></i>
+        </nav> 
     </header>
     <!--++++++++++++++++++++++++++++++++    FIN HEADER      ++++++++++++++++++++++++++++++++-->
     
     <!--++++++++++++++++++++++++++++++++    MAIN            ++++++++++++++++++++++++++++++++-->
     <main>
+        <h1>BILLETERIE</h1>
+        <section class="nom_artiste">
+            <p>SZA<span class="artiste_phare">nom artiste important</span></p>
+            <p>nom artiste<span class="point">.</span></p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+            <p>nom artiste</p>
+        </section>
+        <section class="billet_jour">
+            <h2>BILLET JOUR</h2>
+            <p>DATE</p>
+            <article>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </article>
+        </section>
+        <section class="supergreen">
+            <h2>BILLET SUPERGREEN</h2>
+            <p>TEXTE</p>
+            <article>
+                <div class="card"></div>
+                <div class="card"></div>
+            </article>
+            <h2></h2>
+        </section>
+        <section class="pass_jour">
+            <h2>PASS 2 JOUR</h2>
+            <article>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </article>
+            <h2>PASS JOUR</h2>
+            <div class="sold-out">SOLD-OUT</div>
+        </section>
+        <section class="reduction">
+            <h2>REDUCTION <br> BILLET 1 JOUR</h2>
+            <article>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </article>
+        </section>
     </main>
     <!--++++++++++++++++++++++++++++++++    FIN MAIN        ++++++++++++++++++++++++++++++++-->
 
