--- a/html/galerie.html
+++ b/html/galerie.html
@@ -60,6 +60,32 @@
     
     <!--++++++++++++++++++++++++++++++++    MAIN            ++++++++++++++++++++++++++++++++-->
     <main>
+        <section class="haut">
+            <div class="boissons">BOISSONS</div>
+            <div class="photo1">PHOTO1</div>
+        </section>
+        <section class="centre">
+            <article>
+                <div class="flyer">FLYER</div>
+                <div class="oiseaux">OISEAUX</div>
+            </article>
+            <article>
+                <div class="burger">BURGER</div>
+                <div class="texte1">TEXTE</div>
+                <div class="main">MAIN</div>
+                <div class="photo2">PHOTO2</div>
+            </article>
+        </section>
+        <section class="bas">
+            <div class="texte2">WE LOVE GREEN</div>
+            <article>
+                <div class="photo3">PHOTO3</div>
+                <div class="texte3">
+                    <p>F<br>U<br>N<br><br> &<br><br> P<br>A<br>R<br>T<br>Y</p>
+                </div>
+                <div class="photo4">PHOTO4</div>
+            </article>
+        </section>
     </main>
     <!--++++++++++++++++++++++++++++++++    FIN MAIN        ++++++++++++++++++++++++++++++++-->
 
