--- a/html/programmation.html
+++ b/html/programmation.html
@@ -58,6 +58,34 @@
     
     <!--++++++++++++++++++++++++++++++++    MAIN            ++++++++++++++++++++++++++++++++-->
     <main>
+        <section class="artistes">
+            <article>
+                <a href="">Vendredi 31 Mai</a>
+                <a href="">Samedi 1er Juin</a>
+                <a href="">Dimanche 2 Juin</a>
+            </article>
+            <h1>LES ARTISTES</h1>
+            <article>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </article>
+        </section>
+        <section class="autres_activites">
+            <h2>AUTRES ACTIVITES</h2>
+            <article>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+            </article>
+            
+        </section>
     </main>
     <!--++++++++++++++++++++++++++++++++    FIN MAIN        ++++++++++++++++++++++++++++++++-->
 
