--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </nav>
         <figure class="video_header">
             <video autoplay muted loop>
-                <source src="./img/accueil/background_header.mp4" type="video/mp4" />
+                <source src="img/accueil/background_header.mp4" type="video/mp4" />
             </video>
         </figure>
 
