--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- LIENS CSS GENERAL -->
-    <link rel="stylesheet" href="css/style.css" />
+
     <!-- LIENS DES ICONES FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
@@ -22,7 +21,9 @@
     <meta name="msapplication-TileColor" content="#ebf192" />
     <meta name="theme-color" content="#ffffff" />
 
+    <!-- LIENS CSS GENERAL -->
     <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>WE LOVE GREEN - Acceuil</title>
 </head>
 <body>
@@ -52,7 +53,7 @@
         </nav>
         <figure class="video_header">
             <video autoplay muted loop>
-                <source src="img/accueil/background_header.mp4" type="video/mp4" />
+                <source src="./img/accueil/video.mp4" type="video/mp4" />
             </video>
         </figure>
 
