--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -61,12 +61,12 @@
     <main>
         <h1>BILLETERIE</h1>
         <section class="nom_artiste">
-            <p>SZA<span class="artiste_phare">nom artiste important</span></p>
-            <p>nom artiste<span class="point">.</span></p>
-            <p>nom artiste</p>
-            <p>nom artiste</p>
-            <p>nom artiste</p>
-            <p>nom artiste</p>
+            <p><span class="artiste_phare">SZA</span><span class="point">.</span>EDDY DE PRETTO<span class="point">.</span><span class="artiste_phare">JUSTICE</span><span class="point">.</span>UNCLE WAFFLES<span class="point">.</span><span class="artiste_phare">KAYTRANADA</span></p>
+            <p>BOOMBASS<span class="point">.</span><span class="artiste_phare">HAMZA</span><span class="point">.</span>LEWIS OFMAN</p>
+            <p>MERYL<span class="point">.</span>MAIRO<span class="point">.</span>RALPHIE CHOO</p>
+            <p>TROYE SIVAN<span class="point">.</span><span class="artiste_phare">FOUR TET</span><span class="point">.</span>OMAR APOLLO<span class="point">.</span><span class="artiste_phare">BURNA BOY</span><span class="point">.</span>L'IMPÉRATRICE</p>
+            <p>YAMÊ<span class="point">.</span><span class="artiste_phare">SHAY</span><span class="point">.</span>BADBADNOTGOOD</p>
+            <p>ANETHA<span class="point">.</span><span class="artiste_phare">NINHO</span><span class="point">.</span>CHILLY GONZALES<span class="point">.</span>LALA&CE<span class="point">.</span><span class="artiste_phare">PEGGY GOU</span></p>
             <p>nom artiste</p>
             <p>nom artiste</p>
             <p>nom artiste</p>
