--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -77,9 +77,21 @@
             <h2>BILLET JOUR</h2>
             <p>DATE</p>
             <article>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4></h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4></h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4></h4>
+                    <h4></h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
             </article>
         </section>
         <section class="supergreen">
