--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -66,12 +66,12 @@
             <p>MERYL<span class="point">.</span>MAIRO<span class="point">.</span>RALPHIE CHOO</p>
             <p>TROYE SIVAN<span class="point">.</span><span class="artiste_phare">FOUR TET</span><span class="point">.</span>OMAR APOLLO<span class="point">.</span><span class="artiste_phare">BURNA BOY</span><span class="point">.</span>L'IMPÉRATRICE</p>
             <p>YAMÊ<span class="point">.</span><span class="artiste_phare">SHAY</span><span class="point">.</span>BADBADNOTGOOD</p>
-            <p>ANETHA<span class="point">.</span><span class="artiste_phare">NINHO</span><span class="point">.</span>CHILLY GONZALES<span class="point">.</span>LALA&CE<span class="point">.</span><span class="artiste_phare">PEGGY GOU</span></p>
-            <p>nom artiste</p>
-            <p>nom artiste</p>
-            <p>nom artiste</p>
-            <p>nom artiste</p>
-            <p>nom artiste</p>
+            <p>ANETHA<span class="point">.</span><span class="artiste_phare">NINHO</span><span class="point">.</span>CHILLY GONZALES<span class="point">.</span>LALA&CE<span class="point">.</span><span class="artiste_phare">PEGGY GOU</span><span class="point">.</span>ROUNHAA</p>
+            <p>KENYA GRACE<span class="point">.</span>SHYGIRL<span class="point">.</span><span class="artiste_phare">CHASE & STATUS DJ</span><span class="point">.</span>ETIENNE DE CRÉCY<span class="point">.</span>B2B</p>
+            <p><span class="artiste_phare">KING GIZZARD</span><span class="point">.</span>DJ FALCON<span class="point">.</span>NES<span class="point">.</span>CRYSTAL MURRAY<span class="point">.</span><span class="artiste_phare">JOSMAN</span></p>
+            <p>DECLAN MCKENNA<span class="point">.</span><span class="artiste_phare">KIM GORDON</span><span class="point">.</span>TIF<span class="point">.</span>LSDXOXO LIVE<span class="point">.</span>SHERELLE</p>
+            <p><span class="artiste_phare">PARI TEXAS</span><span class="point">.</span>SKIN ON SKINELOI<span class="point">.</span>PAPOOZ<span class="point">.</span><span class="artiste_phare">SKEPTA DJ</span><span class="point">.</span>MALO<span class="point">.</span>GAPMAN</p>
+            <p>BAMBII<span class="point">.</span><span class="artiste_phare">LUIDJI</span><span class="point">.</span>LYSISTRATA<span class="point">.</span>MIDAS THE JAGABAN</p>
         </section>
         <section class="billet_jour">
             <h2>BILLET JOUR</h2>
