--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -61,12 +61,15 @@
     <main>
         <h1>BILLETERIE</h1>
         <section class="nom_artiste">
-            <p><span class="artiste_phare">SZA</span><span class="point">.</span>EDDY DE PRETTO<span class="point">.</span><span class="artiste_phare">JUSTICE</span><span class="point">.</span>UNCLE WAFFLES<span class="point">.</span><span class="artiste_phare">KAYTRANADA</span></p>
-            <p>BOOMBASS<span class="point">.</span><span class="artiste_phare">HAMZA</span><span class="point">.</span>LEWIS OFMAN</p>
-            <p>MERYL<span class="point">.</span>MAIRO<span class="point">.</span>RALPHIE CHOO</p>
-            <p>TROYE SIVAN<span class="point">.</span><span class="artiste_phare">FOUR TET</span><span class="point">.</span>OMAR APOLLO<span class="point">.</span><span class="artiste_phare">BURNA BOY</span><span class="point">.</span>L'IMPÉRATRICE</p>
-            <p>YAMÊ<span class="point">.</span><span class="artiste_phare">SHAY</span><span class="point">.</span>BADBADNOTGOOD</p>
-            <p>ANETHA<span class="point">.</span><span class="artiste_phare">NINHO</span><span class="point">.</span>CHILLY GONZALES<span class="point">.</span>LALA&CE<span class="point">.</span><span class="artiste_phare">PEGGY GOU</span></p>
+            <p>
+                <span class="artiste_phare">SZA</span><i class="fa-solid fa-circle fa-2xs"></i>EDDY DE PRETTO
+                <i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">JUSTICE</span><i class="fa-solid fa-circle fa-2xs"></i>UNCLE WAFFLES<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">KAYTRANADA</span>
+            </p>
+            <p>BOOMBASS<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">HAMZA</span><i class="fa-solid fa-circle fa-2xs"></i>LEWIS OFMAN</p>
+            <p>MERYL<i class="fa-solid fa-circle fa-2xs"></i>MAIRO<i class="fa-solid fa-circle fa-2xs"></i>RALPHIE CHOO</p>
+            <p>TROYE SIVAN<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">FOUR TET</span> <i class="fa-solid fa-circle fa-2xs"></i>OMAR APOLLO<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">BURNA BOY</span><i class="fa-solid fa-circle fa-2xs"></i>L'IMPÉRATRICE</p>
+            <p>YAMÊ<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">SHAY</span><i class="fa-solid fa-circle fa-2xs"></i>BADBADNOTGOOD</p>
+            <p>ANETHA<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">NINHO</span><i class="fa-solid fa-circle fa-2xs"></i>CHILLY GONZALES<i class="fa-solid fa-circle fa-2xs"></i>LALA&CE<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">PEGGY GOU</span></p>
             <p>nom artiste</p>
             <p>nom artiste</p>
             <p>nom artiste</p>
@@ -79,17 +82,17 @@
             <article>
                 <div class="card">
                     <h4>EARLY</h4>
-                    <h4></h4>
+                    <h4>PRIX</h4>
                     <button class="boutton_vert">RESERVER</button>
                 </div>
                 <div class="card">
                     <h4>EARLY</h4>
-                    <h4></h4>
+                    <h4>PRIX</h4>
                     <button class="boutton_vert">RESERVER</button>
                 </div>
                 <div class="card">
-                    <h4></h4>
-                    <h4></h4>
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
                     <button class="boutton_vert">RESERVER</button>
                 </div>
             </article>
@@ -98,17 +101,37 @@
             <h2>BILLET SUPERGREEN</h2>
             <p>TEXTE</p>
             <article>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
             </article>
             <h2></h2>
         </section>
         <section class="pass_jour">
             <h2>PASS 2 JOUR</h2>
             <article>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
             </article>
             <h2>PASS JOUR</h2>
             <div class="sold-out">SOLD-OUT</div>
@@ -116,10 +139,26 @@
         <section class="reduction">
             <h2>REDUCTION <br> BILLET 1 JOUR</h2>
             <article>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
+                <div class="card">
+                    <h4>EARLY</h4>
+                    <h4>PRIX</h4>
+                    <button class="boutton_vert">RESERVER</button>
+                </div>
             </article>
         </section>
     </main>
