--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -61,20 +61,17 @@
     <main>
         <h1>BILLETERIE</h1>
         <section class="nom_artiste">
-            <p>
-                <span class="artiste_phare">SZA</span><i class="fa-solid fa-circle fa-2xs"></i>EDDY DE PRETTO
-                <i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">JUSTICE</span><i class="fa-solid fa-circle fa-2xs"></i>UNCLE WAFFLES<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">KAYTRANADA</span>
-            </p>
-            <p>BOOMBASS<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">HAMZA</span><i class="fa-solid fa-circle fa-2xs"></i>LEWIS OFMAN</p>
-            <p>MERYL<i class="fa-solid fa-circle fa-2xs"></i>MAIRO<i class="fa-solid fa-circle fa-2xs"></i>RALPHIE CHOO</p>
-            <p>TROYE SIVAN<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">FOUR TET</span> <i class="fa-solid fa-circle fa-2xs"></i>OMAR APOLLO<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">BURNA BOY</span><i class="fa-solid fa-circle fa-2xs"></i>L'IMPÉRATRICE</p>
-            <p>YAMÊ<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">SHAY</span><i class="fa-solid fa-circle fa-2xs"></i>BADBADNOTGOOD</p>
-            <p>ANETHA<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">NINHO</span><i class="fa-solid fa-circle fa-2xs"></i>CHILLY GONZALES<i class="fa-solid fa-circle fa-2xs"></i>LALA&CE<i class="fa-solid fa-circle fa-2xs"></i><span class="artiste_phare">PEGGY GOU</span><span class="point">.</span>ROUNHAA</p>
-            <p>KENYA GRACE<span class="point">.</span>SHYGIRL<span class="point">.</span><span class="artiste_phare">CHASE & STATUS DJ</span><span class="point">.</span>ETIENNE DE CRÉCY<span class="point">.</span>B2B</p>
-            <p><span class="artiste_phare">KING GIZZARD</span><span class="point">.</span>DJ FALCON<span class="point">.</span>NES<span class="point">.</span>CRYSTAL MURRAY<span class="point">.</span><span class="artiste_phare">JOSMAN</span></p>
-            <p>DECLAN MCKENNA<span class="point">.</span><span class="artiste_phare">KIM GORDON</span><span class="point">.</span>TIF<span class="point">.</span>LSDXOXO LIVE<span class="point">.</span>SHERELLE</p>
-            <p><span class="artiste_phare">PARI TEXAS</span><span class="point">.</span>SKIN ON SKINELOI<span class="point">.</span>PAPOOZ<span class="point">.</span><span class="artiste_phare">SKEPTA DJ</span><span class="point">.</span>MALO<span class="point">.</span>GAPMAN</p>
-            <p>BAMBII<span class="point">.</span><span class="artiste_phare">LUIDJI</span><span class="point">.</span>LYSISTRATA<span class="point">.</span>MIDAS THE JAGABAN</p>
+            <p><span class="artiste_phare">SZA</span> • EDDY DE PRETTO • <span class="artiste_phare">JUSTICE</span> • UNCLE WAFFLES • <span class="artiste_phare">KAYTRANADA</span></p>
+            <p>BOOMBASS • <span class="artiste_phare">HAMZA</span> • LEWIS OFMAN</p>
+            <p>MERYL • MAIRO • RALPHIE CHOO</p>
+            <p>TROYE SIVAN • <span class="artiste_phare">FOUR TET</span>  • OMAR APOLLO • <span class="artiste_phare">BURNA BOY</span> • L'IMPÉRATRICE</p>
+            <p>YAMÊ • <span class="artiste_phare">SHAY</span> • BADBADNOTGOOD</p>
+            <p>ANETHA • <span class="artiste_phare">NINHO</span> • CHILLY GONZALES • LALA&CE • <span class="artiste_phare">PEGGY GOU</span> • ROUNHAA</p>
+            <p>KENYA GRACE • SHYGIRL • <span class="artiste_phare">CHASE & STATUS DJ</span> • ETIENNE DE CRÉCY • B2B</p>
+            <p><span class="artiste_phare">KING GIZZARD</span> • DJ FALCON • NES • CRYSTAL MURRAY • <span class="artiste_phare">JOSMAN</span></p>
+            <p>DECLAN MCKENNA • <span class="artiste_phare">KIM GORDON</span> • TIF • LSDXOXO LIVE • SHERELLE</p>
+            <p><span class="artiste_phare">PARI TEXAS</span> • SKIN ON SKINELOI • PAPOOZ • <span class="artiste_phare">SKEPTA DJ</span> • MALO • GAPMAN</p>
+            <p>BAMBII • <span class="artiste_phare">LUIDJI</span> • LYSISTRATA • MIDAS THE JAGABAN</p>
         </section>
         <section class="billet_jour">
             <h2>BILLET JOUR</h2>
@@ -177,23 +174,23 @@
             </article>
             <article class="reseaux-sociaux">
                 <figure>
-                    <a href="#"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f fa-xl"></a>
                     <figcaption>Facebook</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></a>
                     <figcaption>Instagram</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-x-twitter fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter fa-xl"></a>
                     <figcaption>X/Twitter</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube fa-xl"></a>
                     <figcaption>Youtube</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-tiktok fa-xl"></a>
                     <figcaption>TikTok</figcaption>
                 </figure>
             </article>
@@ -220,15 +217,15 @@
                 <figure>
                     <i class="fa-regular fa-credit-card fa-2xl"></i>
                 </figure>
-                <figure><i class="fa-brands fa-cc-visa fa-2xl"></i></figure>
+                <figure><i class="fa-brands fa-cc-visa fa-2xl"></figure>
                 <figure>
-                    <i class="fa-brands fa-cc-mastercard fa-2xl"></i>
+                    <i class="fa-brands fa-cc-mastercard fa-2xl">
                 </figure>
                 <figure>
-                    <i class="fa-brands fa-cc-apple-pay fa-2xl"></i>
+                    <i class="fa-brands fa-cc-apple-pay fa-2xl">
                 </figure>
                 <figure>
-                    <i class="fa-brands fa-cc-paypal fa-2xl"></i>
+                    <i class="fa-brands fa-cc-paypal fa-2xl">
                 </figure>
                 <!-- <figure></figure> -->
             </article>
@@ -240,13 +237,13 @@
             <article>
                 <figure>
                     <a href="https://github.com/Mickey78-225/WE-LOVE-GREEN.git" target="_blank">
-                        <i class="fa-solid fa-code"></i>
+                        <i class="fa-solid fa-code">
                         <figcaption>Github projet</figcaption>
                     </a>
                 </figure>
                 <figure>
                     <a href="https://www.figma.com/proto/v675xdsCaajBcOyzdd4ZUd/Projet-festival?node-id=20%3A2&t=wW1oePZRwZoVQNwQ-1" target="_blank">
-                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-github">
                         <figcaption>Figma projet</figcaption>
                     </a>
                 </figure>
