--- a/html/galerie.html
+++ b/html/galerie.html
@@ -61,29 +61,51 @@
     <!--++++++++++++++++++++++++++++++++    MAIN            ++++++++++++++++++++++++++++++++-->
     <main>
         <section class="haut">
-            <div class="boissons">BOISSONS</div>
-            <div class="photo1">PHOTO1</div>
+            <div class="boissons">
+                <img src="../img/galerie/boisson illustration.png" alt="">
+            </div>
+            <div class="photo1">
+                <img src="../img/galerie/Image1.jpg" alt="">
+            </div>
         </section>
+
         <section class="centre">
             <article>
-                <div class="flyer">FLYER</div>
-                <div class="oiseaux">OISEAUX</div>
+                <div class="flyer"><img src="../img/galerie/Flyer festival.png" alt=""></div>
+                <div class="oiseaux">
+                    <img src="../img/galerie/Oiseau jaune.png" alt="">
+                    <img src="../img/galerie/Oiseau violet.png" alt="">
+                </div>
             </article>
+
             <article>
-                <div class="burger">BURGER</div>
-                <div class="texte1">TEXTE</div>
-                <div class="main">MAIN</div>
-                <div class="photo2">PHOTO2</div>
+                <div class="burger">
+                    <img src="../img/galerie/burger.png" alt="">
+                </div>
+                <div class="texte1">MUSIC • ART • FOOD • TALK • NATURE</div>
+                <div class="main">
+                    <img src="../img/galerie/micro.png" alt="">
+                </div>
+                <div class="photo2">
+                    <figure>
+                        <img src="../img/galerie/image2new.jpg" alt="">
+                    </figure>
+                </div>
             </article>
         </section>
+        
         <section class="bas">
             <div class="texte2">WE LOVE GREEN</div>
             <article>
-                <div class="photo3">PHOTO3</div>
+                <div class="photo3">
+                    <img src="../img/accueil/scene.jpeg" alt="">
+                </div>
                 <div class="texte3">
                     <p>F<br>U<br>N<br><br> &<br><br> P<br>A<br>R<br>T<br>Y</p>
                 </div>
-                <div class="photo4">PHOTO4</div>
+                <div class="photo4">
+                    <img src="../img/galerie/image4.jpeg" alt="">
+                </div>
             </article>
         </section>
     </main>
@@ -102,23 +124,23 @@
             </article>
             <article class="reseaux-sociaux">
                 <figure>
-                    <a href="#"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f fa-xl"></a>
                     <figcaption>Facebook</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></a>
                     <figcaption>Instagram</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-x-twitter fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter fa-xl"></a>
                     <figcaption>X/Twitter</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube fa-xl"></a>
                     <figcaption>Youtube</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-tiktok fa-xl"></a>
                     <figcaption>TikTok</figcaption>
                 </figure>
             </article>
@@ -145,15 +167,15 @@
                 <figure>
                     <i class="fa-regular fa-credit-card fa-2xl"></i>
                 </figure>
-                <figure><i class="fa-brands fa-cc-visa fa-2xl"></i></figure>
+                <figure><i class="fa-brands fa-cc-visa fa-2xl"></figure>
                 <figure>
-                    <i class="fa-brands fa-cc-mastercard fa-2xl"></i>
+                    <i class="fa-brands fa-cc-mastercard fa-2xl">
                 </figure>
                 <figure>
-                    <i class="fa-brands fa-cc-apple-pay fa-2xl"></i>
+                    <i class="fa-brands fa-cc-apple-pay fa-2xl">
                 </figure>
                 <figure>
-                    <i class="fa-brands fa-cc-paypal fa-2xl"></i>
+                    <i class="fa-brands fa-cc-paypal fa-2xl">
                 </figure>
                 <!-- <figure></figure> -->
             </article>
@@ -165,13 +187,13 @@
             <article>
                 <figure>
                     <a href="https://github.com/Mickey78-225/WE-LOVE-GREEN.git" target="_blank">
-                        <i class="fa-solid fa-code"></i>
+                        <i class="fa-solid fa-code">
                         <figcaption>Github projet</figcaption>
                     </a>
                 </figure>
                 <figure>
                     <a href="https://www.figma.com/proto/v675xdsCaajBcOyzdd4ZUd/Projet-festival?node-id=20%3A2&t=wW1oePZRwZoVQNwQ-1" target="_blank">
-                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-github">
                         <figcaption>Figma projet</figcaption>
                     </a>
                 </figure>
