--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -161,7 +161,7 @@
     </main>
     <!--++++++++++++++++++++++++++++++++    FIN MAIN        ++++++++++++++++++++++++++++++++-->
 
-    <!--++++++++++++++++++++++++++++++++    FOOTER          ++++++++++++++++++++++++++++++++-->
+    <!--++++++++++++++++++++++++++++++++ FOOTER ++++++++++++++++++++++++++++++++-->
     <footer>
         <section class="footer__gauche">
             <figure class="logo">
@@ -174,23 +174,23 @@
             </article>
             <article class="reseaux-sociaux">
                 <figure>
-                    <a href="#"><i class="fa-brands fa-facebook-f fa-xl"></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
                     <figcaption>Facebook</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></a>
+                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
                     <figcaption>Instagram</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-x-twitter fa-xl"></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter fa-xl"></i></a>
                     <figcaption>X/Twitter</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-youtube fa-xl"></a>
+                    <a href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
                     <figcaption>Youtube</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><i class="fa-brands fa-tiktok fa-xl"></a>
+                    <a href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
                     <figcaption>TikTok</figcaption>
                 </figure>
             </article>
@@ -217,15 +217,15 @@
                 <figure>
                     <i class="fa-regular fa-credit-card fa-2xl"></i>
                 </figure>
-                <figure><i class="fa-brands fa-cc-visa fa-2xl"></figure>
+                <figure><i class="fa-brands fa-cc-visa fa-2xl"></i></figure>
                 <figure>
-                    <i class="fa-brands fa-cc-mastercard fa-2xl">
+                    <i class="fa-brands fa-cc-mastercard fa-2xl"></i>
                 </figure>
                 <figure>
-                    <i class="fa-brands fa-cc-apple-pay fa-2xl">
+                    <i class="fa-brands fa-cc-apple-pay fa-2xl"></i>
                 </figure>
                 <figure>
-                    <i class="fa-brands fa-cc-paypal fa-2xl">
+                    <i class="fa-brands fa-cc-paypal fa-2xl"></i>
                 </figure>
                 <!-- <figure></figure> -->
             </article>
@@ -237,20 +237,20 @@
             <article>
                 <figure>
                     <a href="https://github.com/Mickey78-225/WE-LOVE-GREEN.git" target="_blank">
-                        <i class="fa-solid fa-code">
+                        <i class="fa-solid fa-code"></i>
                         <figcaption>Github projet</figcaption>
                     </a>
                 </figure>
                 <figure>
                     <a href="https://www.figma.com/proto/v675xdsCaajBcOyzdd4ZUd/Projet-festival?node-id=20%3A2&t=wW1oePZRwZoVQNwQ-1" target="_blank">
-                        <i class="fa-brands fa-github">
+                        <i class="fa-brands fa-github"></i>
                         <figcaption>Figma projet</figcaption>
                     </a>
                 </figure>
             </article>
         </section>
     </footer>
-    <!--++++++++++++++++++++++++++++++++    FIN FOOTER      ++++++++++++++++++++++++++++++++-->
+    <!--++++++++++++++++++++++++++++++++ FIN FOOTER ++++++++++++++++++++++++++++++++-->
 
     <script src="../js/script.js"></script>
 </body>
