--- a/html/galerie.html
+++ b/html/galerie.html
@@ -54,7 +54,7 @@
                 </li>
             </ul>
         </nav>
-        
+        <h1>GALERIE</h1>
     </header>
     <!--++++++++++++++++++++++++++++++++    FIN HEADER      ++++++++++++++++++++++++++++++++-->
     
