page billetterie final

--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -70,7 +70,7 @@
             <p>KENYA GRACE • SHYGIRL • <span class="artiste_phare">CHASE & STATUS DJ</span> • ETIENNE DE CRÉCY • B2B</p>
             <p><span class="artiste_phare">KING GIZZARD</span> • DJ FALCON • NES • CRYSTAL MURRAY • <span class="artiste_phare">JOSMAN</span></p>
             <p>DECLAN MCKENNA • <span class="artiste_phare">KIM GORDON</span> • TIF • LSDXOXO LIVE • SHERELLE</p>
-            <p><span class="artiste_phare">PARI TEXAS</span> • SKIN ON SKINELOI • PAPOOZ • <span class="artiste_phare">SKEPTA DJ</span> • MALO • GAPMAN</p>
+            <p><span class="artiste_phare">PARIS TEXAS</span> • SKIN ON SKINELOI • PAPOOZ • <span class="artiste_phare">SKEPTA DJ</span> • MALO • GAPMAN</p>
             <p>BAMBII • <span class="artiste_phare">LUIDJI</span> • LYSISTRATA • MIDAS THE JAGABAN</p>
         </section>
         <section class="billet_jour">
@@ -147,12 +147,12 @@
                     <button class="boutton_vert">RESERVER</button>
                 </div>
                 <div class="card">
-                    <h4>ALLOCATION HANDICAPÉE ADULTE</h4>
+                    <h4>ALLOCATION ADULTE <br> HANDICAPÉ</h4>
                     <h4>79€</h4>
                     <button class="boutton_vert">RESERVER</button>
                 </div>
                 <div class="card">
-                    <h4>ETUDIANTS ET DEMANDEURS D'EMPLOI</h4>
+                    <h4>ETUDIANTS <br> DEMANDEURS D'EMPLOI</h4>
                     <h4>54€</h4>
                     <button class="boutton_vert">RESERVER</button>
                 </div>
