ajout photo artiste page programmation

--- a/html/programmation.html
+++ b/html/programmation.html
@@ -66,14 +66,14 @@
             </article>
             <h1>LES ARTISTES</h1>
             <article>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle"><img src="/img/artistes/burna boy.webp" alt="burna_boy_photo"></div>
+                <div class="circle"> <img src="/img/artistes/Ninho.jpg" alt="ninho_photo"></div>
+                <div class="circle"><img src="/img/artistes/hamza.webp" alt="hamza_photo"></div>
+                <div class="circle"><img src="/img/artistes/Shay.webp" alt="photo_shay"></div>
+                <div class="circle"><img src="/img/artistes/Chase & Status.jpg" alt="photo_chase&status_dj"></div>
+                <div class="circle"><img src="/img/artistes/meryl.png" alt="photo_meryl"></div>
+                <div class="circle"><img src="/img/artistes/Sherelle.jpg" alt="photo_sherelle"></div>
+                <div class="circle"><img src="/img/artistes/Paris Texas.jpg" alt="photo_paris_texas"></div>
             </article>
         </section>
         <section class="autres_activites">
