--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- LIENS CSS GENERAL -->
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- LIENS DES ICONES FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
@@ -21,9 +22,9 @@
     <meta name="msapplication-TileColor" content="#ebf192" />
     <meta name="theme-color" content="#ffffff" />
 
-    <!-- LIENS CSS GENERAL -->
+    
     <link rel="stylesheet" href="css/accueil.css">
-    <link rel="stylesheet" href="css/style.css" />
+    
     <title>WE LOVE GREEN - Acceuil</title>
 </head>
 <body>
@@ -66,14 +67,34 @@
     <!--++++++++++++++++++++++++++++++++ MAIN ++++++++++++++++++++++++++++++++-->
     <main>
         <section class="artiste">
-            <article>CARROUSEL</article>
-            <article>IMAGE ARTISTE</article>
+            <article>
+                <div><span>SZA</span></div>
+                <div><span>BURNA BOY</span></div>
+            </article>
+            <article>
+                <figure>
+                    <img src="./img/accueil/burna.png" alt="Photo de l'artiste Burna Boy avec un fond ">
+                </figure>
+                <figure>
+                    <img src="./img/accueil/justice.jpg" alt="">
+                </figure>
+                <h2>ET BIEN D'AUTRES</h2>
+            </article>
         </section>
         <section class="presentation">
-            <article>TEXTE</article>
+            <article>
+                <p>Cette année, <b>WE LOVE GREEN</b> ne déroge pas à la règle, accueille stars confirmées, espoirs</p>
+                <p> prometteurs et talents de demain. Avec un line-up excitant sexy, dansant, groovy et électrique.</p>
+                <p> Mais pas que ! </p>
+                <p>Retrouvez la scène <b>Think Tank</b> avec des discussions entre personnalités engagées qui seront</p>
+                <p> présent pour vous offrir deux jours de bouillonnement d’idées pour préserver notre planète ,</p>
+                <p> le <b>Village des Innovations</b>  et bien d’autres activité pendant votre festival.</p>
+                <button class="boutton_blanc-contour-noir">EN SAVOIR PLUS</button>
+            </article>
             <article>CARROUSEL</article>
         </section>
         <section class="infos_pratiques">
+            <h2>INFOS PRATIQUES</h2>
             <article>LIEU & HORAIRES</article>
             <article>VENIR AU FESTIVAL</article>
             <article>ECO CONSIGNES</article> 
