--- a/html/programmation.html
+++ b/html/programmation.html
@@ -178,7 +178,7 @@
                     </div>
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/SKEPTA DJ.jpg" alt="Photo de l'artiste DJ Skepta">
+                            <img src="../img/artistes/SKEPTA DJ.jpg" alt="Photo de l'artiste DJ SKEPTA">
                         </figure>
                     </div>
                 </article>
