--- a/html/structure-de-base.html
+++ b/html/structure-de-base.html
@@ -6,6 +6,10 @@
 
         <!-- LIENS CSS GENERAL -->
         <link rel="stylesheet" href="../css/style.css" />
+        <!-- LIENS POLICES -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap" rel="stylesheet">
         <!-- LIENS DES ICONES FONT AWESOME -->
         <link
             rel="stylesheet"
